# agape-v3

./: .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  README.md  SETUP_AURORA.md  STATUS.md  add_phone_to_user.py  create_database.py  create_superadmin.py  docker-compose.yml  generate_token.py  pyproject.toml  requirements.txt  seed_data.py  setup_production.sh  test_complete_workflow.py  test_complete_workflow_with_db.py  test_edit_event.py  test_edit_event_simple.py  test_edit_post.py  test_endpoints.py  test_image_upload.py  test_post_comments.py  test_post_reactions.py  test_workflow.py  test_workflow_simple.py
alembic/: env.py
alembic/versions/: 2025_11_27_1201-ceaadb12ed1a_initial_migration_users_table.py  2025_11_27_1207-dd4672974a73_create_users_table.py  2025_11_27_1300-7cbd669685c9_create_all_tables_for_agape_v3.py  2025_11_28_0517-ab96717db4e8_rename_event_title_to_name_and_start_.py  2025_11_28_1210-30dfe305aca8_add_translations_table.py  2025_11_28_1610-f03803af7ae1_add_role_to_users.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  admin.py  auth.py  channels.py  channels.py.bak  comments.py  debug.py  debug_auth.py  donations.py  events.py  horariosdemisa.py  identity_verification.py  messaging.py  notifications.py  organizations.py  polls.py  posts.py  prayer_life.py  profile.py  reactions.py  roles.py  search.py  settings.py  social.py  stories.py  tickets.py  translations.py  tutored_accounts.py  users.py
app/application/repositories/: admin_repository.py  channel_repository.py  post_repository.py  (+11 more)
(+78 files in other folders)
